source/blender/blenkernel/intern/paint.cc
@@ -1672,6 +1672,11 @@ static void sculpt_update_object(
 
   BLI_assert(me_eval != nullptr);
 
+  /* This is for handling a newly opened file with no object visible, causing me_eval==NULL. */
+  if (me_eval == nullptr) {
+    return;
+  }
+
   ss->depsgraph = depsgraph;
 
   ss->deform_modifiers_active = sculpt_modifiers_active(scene, sd, ob);
